# m2-autoconf-example

./: AUTHORS  Makefile.am  Makefile.in  README  README.md  a.def  a.mod  b.def  b.mod  c.def  configure  configure.ac  rundemo.in  top.mod  z.def  z.mod
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
slides/: build-slides  m2-autoconf.ps  m2-automake.n  m2-automake.ps
version2/: c.mod  z.def
version3/: c.mod
